CloudFormation.yml
Metadata:
  License: Apache-2.0
AWSTemplateFormatVersion: "2010-09-09"
Description: "ThreePoints Application"

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: "ThreePoints-VPC"

  Gateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ThreePoints-InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: Gateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: Public-Subnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: Private-Subnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: Gateway

  SecurityGroupApplication:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Allow SSH and HTTP as public security group
      Tags:
        - Key: Name
          Value: "Application Security Group"
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  SecurityGroupMySQL:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow MySQL as private security group
      Tags:
        - Key: Name
          Value: "Database Security Group"
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !GetAtt SecurityGroupApplication.GroupId

  UbuntuInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-0cff7528ff583bf9a"
      InstanceType: t2.micro
      Tags:
        - Key: Name
          Value: "Application"
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: SecurityGroupApplication
          SubnetId:
            Ref: PublicSubnet
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo yum -y install httpd php mysql php-mysql

          case $(ps -p 1 -o comm | tail -1) in
          systemd) systemctl enable --now httpd ;;
          init)
          chkconfig httpd on
          service httpd start
          ;;
          *) echo "Error starting httpd (OS not using init or systemd)." 2>&1 ;;
          esac

          if [ ! -f /var/www/html/bootcamp-app.tar.gz ]; then
          cd /var/www/html
          wget https://s3.amazonaws.com/immersionday-labs/bootcamp-app.tar
          tar xvf bootcamp-app.tar
          chown apache:root /var/www/html/rds.conf.php
          fi

          sudo yum -y update



  MySQLInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: mysql
      EngineVersion: 5.7.34
      DBInstanceIdentifier: 'phonebook-db'
      DBInstanceClass: db.t2.micro
      StorageType: 'gp2'
      AllocatedStorage: 20
      DBName: 'phonebook'
      MasterUsername: 'dbadmin'
      MasterUserPassword: 'u6QibHhani'
      DBParameterGroupName:
        Ref: RDSParameterGroup
      VPCSecurityGroups:
        - Fn::GetAtt: [ SecurityGroupMySQL, GroupId ]
      DBSubnetGroupName:
        Ref: DBSubnetGroup

  RDSParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: "Default parameter group for mysql5.7"
      Family: mysql5.7
      Parameters:
        character_set_database: utf32

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Database Subnet Group
      SubnetIds:
        - Ref: PublicSubnet
        - Ref: PrivateSubnet
